<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/baseline_menu_book_black_48"
        android:contentDescription="@string/book_image" />

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="16dp"
        android:text="@string/book_title" />

    <TextView
        android:id="@+id/bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="8dp"
        android:text="@string/author_name" />

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_marginTop="16dp"
        android:text="@string/book_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favoriteButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/favorite"
            style="@style/Widget.MaterialComponents.Button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buyLinkButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/buy_now"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:visibility="visible"
        style="@style/Widget.MaterialComponents.Button"/>

    <ProgressBar
        android:id="@+id/detailsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@android:style/Widget.ProgressBar.Large"
        android:visibility="gone" />
</LinearLayout>
